# Projects

./: .gitignore  Dungeon game  README.md
Project 2/: Movielog.py
Project1/: Dungeon game.py  LICENSE  debug.py  dungeon.py  game.py  item.py  main.py  names.py  player.py  readme.md  room.py
Project1/tests/: test_dungeon.py
Project2/: .env.example  .gitignore  CLI.py  LICENSE  MANIFEST.in  Movielog.py  README.md  __init__.py  file_version_info.txt  gui.py  movie_data.py  movielog.py  movies.json  pyproject.toml  requirements.txt  run.bat  run.sh  setup.bat  setup.py  setup.sh  tmdb_api.py
Project2/api/: tmdb_api.py
Project2/data/: .gitkeep  settings.py
Project2/gui/: __init__.py  color_scheme.py  gui.py  gui_helper.py  gui_movie_list.py  gui_search.py  gui_settings.py  settings.py  theme.py
Project2/gui/widgets/: about_dialog.py  api_key_dialog.py  backup_dialog.py  bulk_import_dialog.py  control_panel.py  entry_panel.py  movie_list_panel.py  rating_dialog.py  settings_dialog.py  thumbnail_listbox.py  tooltip.py  window_manager.py
Project2/models/: manager.py  movie.py
Project2/utils/: backup_manager.py
