[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "movielog"
version = "1.0.0"
authors = [
    {name = "Nolan"}
]
description = "A movie tracking application using TMDb API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "pillow>=11.1.0",
    "tk>=0.1.0",
    "cairosvg>=2.7.1",
    "cairocffi>=1.7.1",
    "cssselect2>=0.7.0",
    "defusedxml>=0.7.1",
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Tk",
    "Topic :: Multimedia :: Video",
]

[project.scripts]
movielog = "movielog:main"

[tool.setuptools]
packages = ["movielog", "api", "gui", "models", "utils"]
